--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,12 @@
 ;
 body{
 font-family: "Lato", sans-serif;
+font-size: 15px;
+}
+h4{
+  font-family: "Poppins", sans-serif;
+  font-size: 1.2rem;
+
 }
 
 
@@ -55,3 +61,13 @@ font-family: "Lato", sans-serif;
   box-shadow:  0px 2px 2px 0px rgba(0, 0, 0, 0.08) !important;
    transition: all 2s ease-in 1s repeat;
 }
+#img-main{
+  width: 40rem;
+  height: 40rem;
+}
+.card-img-top{
+  width: 15rem;
+  
+}
+
+ 
