--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
 ;
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body{
 font-family: "Lato", sans-serif;
 font-size: 15px;
@@ -11,6 +17,15 @@ h4{
   font-size: 1.2rem;
 
 }
+.lato-text{
+  font-family: "Lato", sans-serif;
+  font-weight: 600;
+  color: #040404;
+  font-size: 2rem;
+  }
+  .lato-text h1{
+    padding-bottom: 2rem;
+  }
 
 
 .lato-light {
@@ -72,6 +87,7 @@ h2{
   font-weight: 600;
 }
 .card{
+  width: 90%;
  
   padding: 0.4rem;
 }
@@ -79,3 +95,23 @@ h2{
   font-size: 1.5rem;
   font-weight: 400;
  }
+ .card-title{
+  font-size: 1.1rem;
+ }
+ .bg-change{
+ background: rgb(232,137,137);
+background: linear-gradient(90deg, rgba(232,137,137,1) 0%, rgba(210,200,165,1) 32%, rgba(232,137,137,1) 100%);
+  height: 10rem;
+ }
+ .lato-text{
+  position: relative;
+  top: 3rem;
+  text-align: center;
+ }
+ .lato-text i {
+  color: rgb(74, 101, 209);
+ }
+.lato-text a {
+  text-decoration: none;
+  color: #424141;
+}
